# gdg-ottawa

./: README.md
BuildWithAI2025/: .gitignore  README.md
BuildWithAI2025/agents/book_recommender/: .env.example  agent.py
BuildWithAI2025/agents/country-info-agent/: .env.example  agent.py
BuildWithAI2025/country-info-agent/: Dockerfile  agent.py  client.py  requirements.txt  server.py
BuildWithAI2025/gemini-cli/: Dockerfile  deployment.yaml  index.js  package-lock.json  package.json  service.yaml
BuildWithAI2026/: README.md
BuildWithAI2026/101/: .gitignore
BuildWithAI2026/prai-roadshow-lab-1-starter/agents/orchestrator/: agent.py
BuildWithAI2026/prai-roadshow-lab-1-starter/agents/researcher/: agent.py
DevFest2025/: README.md
DevFest2025/1-devfest-website/: .gcloudignore  README.md  index.html  package.json  server.js
DevFest2025/2-MCPServer/: Dockerfile  README.md  pyproject.toml  server.py
DevFest2025/3-imageDescriberJob/: .gitignore  Dockerfile  README.md  main.py  requirements.txt
DevFest2025/4-scaleWithGPU/: README.md
DevFest2025/4-scaleWithGPU/adk_agent/: .env.example  README.md  pyproject.toml
DevFest2025/4-scaleWithGPU/ollama/: Dockerfile  README.md
