[project]
name = "production-adk-agent"
version = "0.1.0"
description = "Production-ready ADK agent for Lab 3 - Prototype to Production"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk==1.17.0",
    "python-dotenv==1.2.1",
    "httpx==0.28.1",
    "google-auth==2.42.1",
    "locust==2.42.1",
    "litellm==1.79.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "ruff==0.14.3",
]
